--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/core": "^7.14.3",
     "@babel/node": "^7.14.2",
     "@babel/preset-env": "^7.14.4",
+    "core-js": "3",
     "jest": "^27.0.3",
     "rollup": "^2.50.5",
     "rollup-plugin-babel": "^4.4.0",
@@ -36,7 +37,5 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^7.0.2"
   },
-  "dependencies": {
-    "core-js": "3"
-  }
+  "dependencies": {}
 }
