--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "rollup -wc rollup.config.dev.js",
     "build": "rollup -c rollup.config.dev.js",
+    "build:ts": "rollup -c rollup.config.ts.js",
     "build:prod": "rollup -c rollup.config.prod.js",
     "test": "jest"
   },
@@ -28,6 +29,7 @@
     "@babel/core": "^7.14.3",
     "@babel/node": "^7.14.2",
     "@babel/preset-env": "^7.14.4",
+    "@rollup/plugin-typescript": "^8.2.1",
     "core-js": "3",
     "jest": "^27.0.3",
     "rollup": "^2.50.5",
@@ -35,7 +37,9 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.4"
   },
   "dependencies": {}
 }
