--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@leslie0403/utils",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "rollup 构建的常用工具函数库",
-  "main": "dist/utils.cjs.js",
-  "module": "dist/utils.esm.js",
-  "browser": "dist/utils.umd.js",
+  "main": "dist/utils/cjs.js",
+  "module": "dist/utils/esm.js",
+  "browser": "dist/utils/umd.js",
   "scripts": {
     "dev": "rollup -wc rollup.config.dev.js",
     "build": "rollup -c rollup.config.dev.js",
