--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
   "name": "@leslie0403/utils",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "rollup + typescript 构建的常用工具函数库",
-  "main": "dist/utils.cjs.js",
-  "module": "dist/utils.esm.js",
-  "browser": "dist/utils.umd.js",
+  "main": "lib/utils.umd.js",
+  "module": "lib/utils.esm.js",
+  "typings": "lib/types/index.d.ts",
   "scripts": {
-    "dev": "rollup -wc rollup.config.dev.js",
-    "build": "rollup -c rollup.config.dev.js",
-    "build:ts": "rollup -c rollup.config.ts.js",
-    "build:prod": "rollup -c rollup.config.prod.js",
-    "types": "tsc --declaration -p ./ -t es2015 --emitDeclarationOnly --outDir dist/types",
+    "dev": "rollup -wc rollup.config.js",
+    "build": "rollup -c rollup.config.js",
     "test": "jest"
   },
-  "types": "./dist/types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/luozyiii/utils.git"
@@ -31,7 +27,7 @@
     "@babel/core": "^7.14.3",
     "@babel/node": "^7.14.2",
     "@babel/preset-env": "^7.14.4",
-    "@rollup/plugin-typescript": "^8.2.1",
+    "@types/jest": "^26.0.23",
     "core-js": "3",
     "jest": "^27.0.3",
     "rollup": "^2.50.5",
@@ -41,6 +37,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
+    "ts-jest": "^27.0.3",
     "tslib": "^2.3.0",
     "typescript": "^4.3.4"
   },
