--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/node": "^7.14.2",
     "@babel/preset-env": "^7.14.4",
     "@types/jest": "^26.0.23",
+    "@typescript-eslint/parser": "^4.28.1",
     "core-js": "3",
     "jest": "^27.0.3",
     "rollup": "^2.50.5",
